--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
-                <a href="#" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bxl-behance'></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/pgkvdk05" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
             <div class="home__img">
                 <svg class="home__blob">
@@ -157,11 +156,9 @@
         <a href="https://www.facebook.com/share/163zxD1BUT/" class="social-logo facebook"><i class='bx bxl-facebook'></i></a>
         <a href="https://www.instagram.com/thegkrowdy?igsh=MXMxb3ZwOWtmd2dxZA==" class="social-logo instagram"><i class='bx bxl-instagram' ></i></a>
         <a href="#" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
-        <a href="#" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
+        <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
         <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
-        <a href="#" class="social-logo youtube"><i class='bx bxl-youtube' ></i></a>
-    </div>
-
+        
         <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
     </footer>
 
