--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			
         </div>
         <div>
-            <img src="./work3.jpg" alt="Skills Image" class="skills__img">
+            <img src="./skills_professional-skills_web-development_.png (1).jpg" alt="Skills Image" class="skills__img">
         </div>
     </div>
 </section>
