--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="home bd-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Gopala Krishnan</span><br>Web Developer</h1>
-                <a href="#" class="button">Contact</a>
+                <a href="./reume gk.pdf" class="button">Download CV</a>
             </div>
             <div class="home__social">
                 <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
