--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section class="work section" id="work">
             <h2 class="section-title">Work</h2>
             <div class="work__container bd-grid">
-                <a href="#" class="work__img"><img src="./download.jpeg" alt="Work 1"></a>
+                <a href="#" class=" "><img src="./download.jpeg" alt="Work 1"></a>
                 <ul class="work__container", align="center-right">
 				<li>Part-time Associate</li>
 				<li>	Zudio:</li>
@@ -158,7 +158,7 @@
         <a href="#" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
         <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
         <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
-        
+        <br>
         <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
     </footer>
 
