--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Digital Portfolio - Gopala Krishnan</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         <section class="home bd-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Gopala Krishnan</span><br>Web Developer</h1>
-                <a href="./reume gk.pdf" class="button">Download CV</a>
+                <a href="./resume_gk.pdf" class="button">Download CV</a>
             </div>
             <div class="home__social">
                 <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
@@ -57,81 +57,85 @@
                 <div>
                     <h2 class="about__subtitle">I'm Gopala Krishnan</h2>
                     <p class="about__text">A second-year BSc Computer Science student at Mangalam College of Arts and Science. 
-					I’m passionate about web development and programming, with hands-on experience in HTML5, CSS, JavaScript, and knowledge of Python and Java.
-					Alongside my studies, I’m currently working part-time at Zudio, gaining valuable experience in customer service.</p>
+                        I’m passionate about web development and programming, with hands-on experience in HTML5, CSS, JavaScript, and knowledge of Python and Java.
+                        Alongside my studies, I’m currently working part-time at Zudio, gaining valuable experience in customer service.</p>
                 </div>
             </div>
         </section>
 
         <!--===== SKILLS =====-->
-<section class="skills section" id="skills">
-    <h2 class="section-title">Skills</h2>
-    <div class="skills__container bd-grid">
-        <div>
-            <h2 class="skills__subtitle">Professional Skills</h2>
-            <ul class="skills__text" align="center">
-                <li><strong>Web Development:</strong> HTML5, CSS3, JavaScript (Responsive design, user-friendly layouts)</li>
-                <li><strong>Programming:</strong> Python, Java (Software development, problem solving)</li>
-                <li><strong>Version Control:</strong> Git (Collaboration and project management)</li>
-                <li><strong>Problem Solving:</strong> Efficient in troubleshooting and debugging</li>
-            </ul><br><br>
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-html5 skills__icon'></i>
-                    <span class="skills__name">HTML5</span>
-                </div>
-                <div class="skills__bar skills__html"></div>
-                <span class="skills__percentage">95%</span>
-            </div>
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-css3 skills__icon'></i>
-                    <span class="skills__name">CSS3</span>
-                </div>
-                <div class="skills__bar skills__css"></div>
-                <span class="skills__percentage">85%</span>
-            </div>
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-javascript skills__icon'></i>
-                    <span class="skills__name">JavaScript</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <span class="skills__percentage">55%</span>
-            </div>
-			 <div class="skills__data">
+        <section class="skills section" id="skills">
+            <h2 class="section-title">Skills</h2>
+            <div class="skills__container bd-grid">
+                <div>
+                    <h2 class="skills__subtitle">Professional Skills</h2>
+                    <ul class="skills__text" align="center">
+                        <li><strong>Web Development:</strong> HTML5, CSS3, JavaScript (Responsive design, user-friendly layouts)</li>
+                        <li><strong>Programming:</strong> Python, Java (Software development, problem solving)</li>
+                        <li><strong>Version Control:</strong> Git (Collaboration and project management)</li>
+                        <li><strong>Problem Solving:</strong> Efficient in troubleshooting and debugging</li>
+                    </ul>
+                    <br><br>
+                    <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-html5 skills__icon'></i>
-                            <span class="skills__name">Python</span>
+                            <span class="skills__name">HTML5</span>
                         </div>
                         <div class="skills__bar skills__html"></div>
                         <span class="skills__percentage">95%</span>
-                </div>
-			 <div class="skills__data">
+                    </div>
+                    <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-html5 skills__icon'></i>
-                            <span class="skills__name">Java</span>
+                            <i class='bx bxl-css3 skills__icon'></i>
+                            <span class="skills__name">CSS3</span>
                         </div>
-                        <div class="skills__bar skills__html"></div>
+                        <div class="skills__bar skills__css"></div>
                         <span class="skills__percentage">85%</span>
                     </div>
-			
-        </div>
-        <div>
-            <img src="./skills_professional-skills_web-development_.png (1).jpg" alt="Skills Image" class="skills__img">
-        </div>
-    </div>
-</section>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxl-javascript skills__icon'></i>
+                            <span class="skills__name">JavaScript</span>
+                        </div>
+                        <div class="skills__bar skills__js"></div>
+                        <span class="skills__percentage">55%</span>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxl-python skills__icon'></i>
+                            <span class="skills__name">Python</span>
+                        </div>
+                        <div class="skills__bar skills__python"></div>
+                        <span class="skills__percentage">95%</span>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxl-java skills__icon'></i>
+                            <span class="skills__name">Java</span>
+                        </div>
+                        <div class="skills__bar skills__java"></div>
+                        <span class="skills__percentage">85%</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="./skills_professional-skills_web-development_.png (1).jpg" alt="Skills Image" class="skills__img">
+                </div>
+            </div>
+        </section>
+
         <!--===== WORK =====-->
         <section class="work section" id="work">
             <h2 class="section-title">Work</h2>
             <div class="work__container bd-grid">
-                <a href="#" class=" "><img src="./download.jpeg" alt="Work 1"></a>
-                <ul class="work__container", align="center-right">
-				<li>Part-time Associate</li>
-				<li>	Zudio:</li>
-						<li>Assist customers and manage inventory</li>
-						<li>Develop multitasking and organizational skills in a fast-paced environment</li>
+                <a href="#" class="work__img">
+                    <img src="./download.jpeg" alt="Work 1">
+                </a>
+                <ul class="work__container" align="center-right">
+                    <li>Part-time Associate</li>
+                    <li> Zudio:</li>
+                    <li>Assist customers and manage inventory</li>
+                    <li>Develop multitasking and organizational skills in a fast-paced environment</li>
+                </ul>
             </div>
         </section>
 
@@ -153,16 +157,17 @@
     <footer class="footer">
         <p class="footer__title">Gopala Krishnan</p>
         <div class="social-logos">
-        <a href="https://www.facebook.com/share/163zxD1BUT/" class="social-logo facebook"><i class='bx bxl-facebook'></i></a>
-        <a href="https://www.instagram.com/thegkrowdy?igsh=MXMxb3ZwOWtmd2dxZA==" class="social-logo instagram"><i class='bx bxl-instagram' ></i></a>
-        <a href="#" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
-        <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
-        <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
-        <br>
-        <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
+            <a href="https://www.facebook.com/share/163zxD1BUT/" class="social-logo facebook"><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.instagram.com/thegkrowdy?igsh=MXMxb3ZwOWtmd2dxZA==" class="social-logo instagram"><i class='bx bxl-instagram' ></i></a>
+            <a href="https://www.x.com/Gopala_VDK" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
+            <br>
+            <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
+        </div>
     </footer>
 
     <!--===== MAIN JS =====-->
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
