--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <img src="./download.jpeg" alt="Work 1">
                 </a>
                 <ul class="work__container" align="center-right">
-                    <li>Part-time Associate</li>
+                    <li>Part-time: Sales Associate</li>
                     <li> Zudio:</li>
                     <li>Assist customers and manage inventory</li>
                     <li>Develop multitasking and organizational skills in a fast-paced environment</li>
@@ -154,19 +154,18 @@
     </main>
 
     <!--===== FOOTER =====-->
-    <footer class="footer">
-        <p class="footer__title">Gopala Krishnan</p>
-        <div class="social-logos">
-            <a href="https://www.facebook.com/share/163zxD1BUT/" class="social-logo facebook"><i class='bx bxl-facebook'></i></a>
-            <a href="https://www.instagram.com/thegkrowdy?igsh=MXMxb3ZwOWtmd2dxZA==" class="social-logo instagram"><i class='bx bxl-instagram' ></i></a>
-            <a href="https://www.x.com/Gopala_VDK" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
-            <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
-            <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
-            <br>
-            <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
-        </div>
-    </footer>
-
+<!--===== FOOTER =====-->
+<footer class="footer">
+    <p class="footer__title">Gopala Krishnan</p>
+    <div class="social-logos">
+        <a href="https://www.facebook.com/share/163zxD1BUT/" class="social-logo facebook"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.instagram.com/thegkrowdy?igsh=MXMxb3ZwOWtmd2dxZA==" class="social-logo instagram"><i class='bx bxl-instagram' ></i></a>
+        <a href="https://www.x.com/Gopala_VDK" class="social-logo twitter"><i class='bx bxl-twitter' ></i></a>
+        <a href="https://in.linkedin.com/in/pgk300505ch-in/" class="social-logo linkedin"><i class='bx bxl-linkedin' ></i></a>
+        <a href="https://github.com/pgkvdk05" class="social-logo github"><i class='bx bxl-github' ></i></a>
+    </div>
+    <p class="footer__copy">&#169; Gopala Krishnan. All rights reserved.</p>
+</footer>
     <!--===== MAIN JS =====-->
     <script src="./script.js"></script>
 </body>
