--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Gopala Krishnan</a>
+                <a href="https://pgkvdk05.github.io/Digital_Protflolio/" class="nav__logo">Gopala Krishnan</a>
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
